--- a/asset/styles.css
+++ b/asset/styles.css
@@ -170,7 +170,7 @@ ul.social-media-list {
     margin-top: 20px;
     width: 230px;
 }
-#welcomeusername {
+.welcome {
     margin-left: 25px;
     font-style: italic;
     color: #7f7f7f;
